--- a/src/page/forum/Forum.css
+++ b/src/page/forum/Forum.css
@@ -5,6 +5,7 @@
    flex-direction: column;
    align-items: center;
    justify-content: center;
+   list-style: none;
 }
 .forum-page h1 {
    color: white;
