--- a/src/page/forum/Forum.css
+++ b/src/page/forum/Forum.css
@@ -1,5 +1,3 @@
-
-
 .forum-page {
    padding: 2rem;
    max-width: 800px;
@@ -30,6 +28,11 @@
    border-radius: 5px;
 }
 
+.reply-forum input,
+.reply-forum textarea {
+   width: 95%;
+}
+
 .question-forum button,
 .reply-forum button {
    background-color: var(--orange);
@@ -42,16 +45,34 @@
 
 .answer {
    margin: 1rem 0;
+   color: white;
    padding: 1rem;
    background-color: var(--background-light);
    border: 1px solid var(--orange);
    border-radius: 5px;
+   position: relative;
 }
+
 
 .question-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
+   background-color: white;
+   padding: 0.5rem 1rem;
+   border-radius: 10px;
+   gap: 20px;
+}
+
+.question-header h3 {
+   color: var(--orange);
+   width: 100%;
+   font-size: 15px;
+   font-weight: 500;
+}
+
+.question-forum p {
+   color: white;
 }
 
 .delete-btn,
@@ -67,8 +88,13 @@ ul {
    padding-left: 20px;
 }
 
+
 .reply-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
+   border: 1px solid var(--orange);
+   padding: 0.5rem;
+   margin: 0.5rem 0;
+   border-radius: 10px;
 }
